# screwless

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
dnas/screwless/workdir/: dna.yaml
dnas/screwless/zomes/coordinator/offers/: Cargo.toml
dnas/screwless/zomes/coordinator/offers/src/: all_offers.rs  lib.rs  offer.rs
dnas/screwless/zomes/coordinator/offers/tests/: all_offers.rs  offer.rs
dnas/screwless/zomes/coordinator/offers/tests/common/: mod.rs
dnas/screwless/zomes/integrity/offers/: Cargo.toml
dnas/screwless/zomes/integrity/offers/src/: lib.rs  offer.rs
ui/: index.html
ui/src/: holochain-app.ts
ui/src/screwless/offers/: context.ts  offers-client.ts  offers-store.ts  types.ts
ui/src/screwless/offers/elements/: all-offers.ts  create-offer.ts  edit-offer.ts  offer-detail.ts  offer-summary.ts
workdir/: happ.yaml  web-happ.yaml
