[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.2.4"
hdk = "=0.1.4"
holochain = "0.1.6"
serde = "=1.0.166"

[workspace.dependencies.profiles]
path = "dnas/screwless/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/screwless/zomes/integrity/profiles"
