[package]
name = "offers"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "offers"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

offers_integrity = { workspace = true } 


[dev-dependencies]
fixt = "*"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { worskpace = true, default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }

